# cmake_clang_h743vi

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  MEMORY.md  STM32H743XX_FLASH.ld  build_and_flash.sh  cmake-clang-h743vi.ioc  compile.sh  flash.sh  ov2640_plan.md  plan1.md  runbuid_and_flash.sh  st7789.md
Adapter/: CmakeLists.txt
Adapter/Inc/: at24cxx_adapter.h  draw_adapter.h  led_adapter.h  ov2640_adapter.h
Adapter/Src/: at24cxx_adapter.c  draw_adapter.c  led_adapter.c  ov2640_adapter.c
Bsp_drivers/: CmakeLists.txt
Bsp_drivers/Inc/: bsp_drv_at24.h  bsp_drv_led.h  bsp_drv_ov2640.h  bsp_drv_st7789.h
Bsp_drivers/Src/: bsp_drv_at24.c  bsp_drv_led.c  bsp_drv_ov2640.c  bsp_drv_st7789.c
Core/Inc/: FreeRTOSConfig.h  cmds.h  main.h  stm32h7xx_it.h
Core/Src/: cmds.c  dcmi.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  usart.c
Handle/: CMakeLists.txt
Handle/Inc/: camera_handle.h  draw_handle.h  led_handle.h  storage_handle.h
Handle/Src/: camera_handle.c  draw_handle.c  led_handle.c  storage_handle.c
JLinkload/: flash.jlink
Middlewares/Dwt/: CmakeLists.txt
Middlewares/Front/: CmakeLists.txt
Middlewares/Kfifo/: CmakeLists.txt
Middlewares/LetterShell/: CmakeLists.txt
ST_platform/: CmakeLists.txt
adapter/: CmakeLists.txt
bsp_drivers/: CmakeLists.txt
bsp_handle/: CmakeLists.txt
cmake/: starm-clang.cmake
handle/: CMakeLists.txt
memory/: st7789-driver-status.md
st_bsp/: CmakeLists.txt
st_platform/: CmakeLists.txt
(+61 files in other folders)
